alignment pirraablem not yet solved

--- a/WebContent/Assets/viewstudentSyllabus.css
+++ b/WebContent/Assets/viewstudentSyllabus.css
@@ -5,3 +5,36 @@ body {
   font-size: 4vw;
   text-align: center;
 }
+addform{
+	width:100vw;
+	display:flex;
+	justify-content:center;
+}
+.addform .subject{
+	padding: 0.5em 0.8em;
+	border:none;
+	outline:none;
+	border-radius:0.9em;
+	font-size:1.2em;
+	color: #303030;
+	background: #efefef;
+	font-weight: 700;
+	margin:0em 0.5em;
+}
+.addform .submit{
+	padding: 0.5em 0.8em;
+	border-radius:0.5em;
+	font-size:5em;
+	font-weight: 700;
+	outline:none;
+	border:none;
+	cursor:pointer;
+	font-size: 16px;
+  	background-color: #222a34;
+  	color: white;
+}
+.addform .submit:hover {
+    background: #047a1e;
+    cursor: pointer;
+    transform: translate(0px, -2px);
+}
